Change header to have bg color and black border, add active effects

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,9 @@
 @use './sass/variables'as *;
 
 html {
-  background-image: url('./assets/bg_waves_dark2.svg');
-  // background-image: url('./assets/bg_waves_dark.svg');
-  // background-image: url('./assets/bg_waves2.svg');
+  // background-image: url('./assets/bg_stripes.svg');
+  background-image: url('./assets/bg_waves_dark.svg');
+  // background-image: url('./assets/bg_waves1.svg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
