Change primary font to Sulphur Point

--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -19,11 +19,11 @@
 
   &--heading {
     color: $primary-color;
-    text-shadow: .25vw .25vw 0vw black,
-    -.15vw -.05vw 0vw black,
-    -.15vw -.05vw .5vw black,
-    -.1vw -.06vw .5vw black,
-    ;
+    text-shadow: .25vw .25vw 0vw black;
+    // -.15vw -.05vw 0vw black,
+    // -.15vw -.05vw .5vw black,
+    // -.1vw -.06vw .5vw black,
+    // ;
     // filter: drop-shadow(-2px 2px 0px rgba(0, 0, 0, 0.583));
     font-size: 3.75vw;
   }
@@ -36,17 +36,18 @@
   }
   
   &--site-name {
+    font-family:"Oleo Script", cursive;
     font-size: 6.5vw;
-    font-style: italic;
+    // font-style: italic;
     filter: drop-shadow(-.5vw .35vw 0px black);
     color: $primary-color;
     text-shadow:
       -.1vw 0px .5px black,
-      0px .1vw .5px black;
-    //   -.35vw .15vw 0px $secondary-color,
-    //   -.65vw .25vw 0px $accent-color-three,
-    //   -.95vw .5vw 0px $accent-color-two,
-    //   -1.15vw .75vw 0px black,
+      0px .1vw .5px black,
+      -.35vw .15vw 0px $secondary-color,
+      -.65vw .25vw 0px $accent-color-three,
+      -.95vw .5vw 0px $accent-color-two,
+      -1.15vw .75vw 0px black;
   }
 
 }
