--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -6,7 +6,7 @@
   padding: .5rem;
   letter-spacing: .075vw;
   width: 100%;
-  margin: 0 auto;
+  margin-bottom: 2rem;
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
