Allow me to achieve contentment with the header and homepage

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,8 +2,8 @@
 
 html {
   // background-image: url('./assets/bg_stripes.svg');
-  // background-image: url('./assets/bg_waves_dark.svg');
-  background-image: url('./assets/bg_waves2.svg');
+  background-image: url('./assets/bg_waves_dark.svg');
+  // background-image: url('./assets/bg_waves2.svg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
