--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,65 +1,66 @@
 @use '../../sass/variables'as *;
 
 .header {
-  // outline: 3px solid red;
   display: flex;
-  padding: .5rem;
   letter-spacing: .075vw;
   width: 100%;
-  margin-bottom: 2rem;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-  background-color: $secondary-color;
-  border: 3px solid #000000;
-  // box-shadow: 0px 2px 3px #000000;
+  font-size: 1.25em;
 }
+
+.header-left{
+  // outline:1px solid red;
+  float:left;
+}
+
 
 .header-center {
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-around;
-  min-width: 30%;
-  // width: 40%;
-  // max-width:45%;
+  margin:0 auto;
+  // outline:1px solid red;
 }
 
 .header-right {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-evenly;
-  align-items: baseline;
-  min-width: 15%;
+  // display: flex;
+  // flex-flow: row nowrap;
+  // outline:1px solid red;
+  float:right;
 }
 
 .site-logo {
-  max-width: 12vh;
-  padding: .75vw 1vw;
-  border: .1rem solid $primary-color;
+  max-width: 9vh;
   border-radius: 10px;
+  filter:drop-shadow(1px 1px 1px black)
 }
 
 .nav-link,
 .nav-link-a {
-  // background-color: black;
+  background-color:  $primary-color;
   background-color: none;
+  outline: 1px solid black;
   border-radius: 10px;
-  // border: .1rem solid black;
   padding: .25rem 1rem;
-  font-size: 1.75vw;
+  // font-size: 1.75vw;
   color:black;
-  color: $primary-color;
-  text-shadow: 1px 1px 2px black,
-    -1px 2px 1px black;
+  margin: .25rem;
+  // color: $primary-color;
+  // text-shadow: 1px 1px 0px $primary-color,
+  //   -1px 0px 0px $primary-color,
+  //   0px 0px 1px black;
 
   &:hover {
-    outline: 1px solid $primary-color;
+    outline: 1px solid black;
   }
 }
 
 .nav-link-a {
   color:$primary-color;
   outline:1px solid black;
+  // text-shadow: 1px 1px 0px #000000,
+  // -1px 1px 1px #000000;
   
   &--coffee {
     background-color: #a47c6c;
@@ -71,18 +72,15 @@
   &--tea{
     background-color:#7ea46c;
   }
+
+  &--cart{
+    color:black;
+    background-color:#f49787;
+  }
+  
+  &--orders{
+    color:black;
+    background-color:$accent-color-three;
+  }
 }
 
-// .orders-link,
-// .cart-link,
-// .coffee-link,
-// .tea-link,
-// .shop-link, .header-active {
-//   background-color: none;
-//   border-radius: 10px;
-//   border: .15vw solid black;
-//   padding: .5vw .75vw;
-//   font-size: 1.25rem;
-//   color: $primary-color;
-//   text-shadow: 1px 1px 0px black;
-// }
