--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,8 +1,10 @@
 // @import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap'); 
-// @import url('https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@100;200;300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;1,100;1,200;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@300;400&display=swap');
 //* For homepage maybe? Groovy little font and I like that long text shadow effect
 // font-family: 'Lobster', cursive;
 
