--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -69,23 +69,25 @@
 
 .brief {
   // font-family: "Lobster Two", cursive;
+  color:$primary-color;
 	flex-direction: column;
 	align-items: center;
 	justify-content:space-around;
 	margin: 0 auto;
 	// font-weight: 500;
+  font-style:italic;
   letter-spacing: 1px;
-	font-size: 1.75rem;
+	font-size: 1.85rem;
 	width: 70%;
-	height: 30%;
+	height: 10%;
 	display: flex;
 	text-align: center;
 
   // text-align:justify;
-  // text-shadow: .05vw .05vw 0vw black,
-  //   -.15vw -.05vw 0vw black,
-  //   -.15vw -.05vw .2vw black,
-  //   -.1vw -.06vw .2vw black;
+  text-shadow: .02vw .02vw 0vw black,
+    -.1vw -.05vw .2vw black,
+    -.1vw -.05vw .3vw black,
+    -.1vw -.05vw .4vw black;
   &--top{
     
   }
