--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @use './sass/variables'as *;
 
 html {
-  // background-image: url('./assets/bg_stripes.svg');
+  background-image: url('./assets/bg_stripes.svg');
   background-image: url('./assets/bg_waves_dark.svg');
   // background-image: url('./assets/bg_waves2.svg');
   background-size: cover;
