--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,7 +1,6 @@
 // @import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap');
-// @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap'); 
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap');
-// @import url('https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@100;200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@100;200;300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;1,100;1,200;1,300;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@300;400&display=swap');
@@ -9,7 +8,7 @@
 // font-family: 'Lobster', cursive;
 
 
-$primary-font: "Oleo Script", cursive;
+$primary-font: "Hepta Slab", cursive;
 $primary-color: #f7ede2;
 $secondary-color:#84a59d;
 $accent-color-one:#f5cac3;
