--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -8,7 +8,17 @@
   height:100%;
   width:100%;
   position:fixed;
-  // background-color:$secondary-color;
+
+}
+
+.intro-container{
+  height: 65%;
+  margin-top: 2.5rem;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
 
 .intro {
@@ -17,9 +27,11 @@
   justify-content: center;
   text-align: center;
   align-items: center;
-  letter-spacing: 3px;
-  height:40%;
-  border-radius: 5px;
+  height: 95%;
+  border-radius: 15px;
+  background-color: black;
+  width: 90%;
+  margin: 0 auto;
 
   &--heading {
     font-family: "Oleo Script", cursive;
@@ -37,8 +49,6 @@
   &--site-name {
     font-family: "Oleo Script", cursive;
     font-size: 8.5vw;
-    // font-style: italic;
-    // box-shadow: 0px .35vw 10px 0px black;
     filter:drop-shadow(2px 2px 2px black);
     color: $primary-color;
     text-shadow:
@@ -51,16 +61,16 @@
   }
 
   &--tagline{
-    font-family: "Oleo Script", cursive;
-    font-size:4vw;
-    font-style:italic;
+    font-family: "Hepta Slab", cursive;
+    font-size:2vw;
+    // font-style:italic;
     color:$primary-color;
-    text-shadow: .15vw .15vw 0vw black,
-      -.1vw -.05vw 0.2vw black,
-      -.1vw -.05vw .1vw black,
-      -.1vw -.05vw .5vw black,
-      -.1vw -.05vw .6vw black,
-    ;
+    // text-shadow: .15vw .15vw 0vw black,
+    //   -.1vw -.05vw 0.2vw black,
+    //   -.1vw -.05vw .1vw black,
+    //   -.1vw -.05vw .5vw black,
+    //   -.1vw -.05vw .6vw black,
+    // ;
   }
   
   
