--- a/src/Components/Orders/Orders.scss
+++ b/src/Components/Orders/Orders.scss
@@ -1,12 +1,11 @@
 @use '../../sass/variables'as *;
 
 .orders {
-  outline: 2px solid red;
   display: flex;
-  height: 95vh;
   flex-flow: column nowrap;
-  justify-content: center;
   align-items: center;
+  position:fixed;
+  width:100%;
 }
 
 .order-card-container {
@@ -20,13 +19,11 @@
   font-size: 1.25rem;
   padding: 1rem;
   margin: 1rem 0;
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
   overflow-y: auto;
 
   &--header {
     font-size: 2rem;
+    text-align:center;
   }
 }
 
