--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -8,7 +8,7 @@
 // font-family: 'Lobster', cursive;
 
 
-$primary-font: "Hepta Slab", cursive;
+$primary-font: "Raleway", sans-serif;
 $primary-color: #f7ede2;
 $secondary-color:#84a59d;
 $accent-color-one:#f5cac3;
