--- a/src/Components/Brew/Brew.scss
+++ b/src/Components/Brew/Brew.scss
@@ -44,6 +44,7 @@
   display: flex;
   flex-flow: column wrap;
   justify-content: space-around;
+  align-items:center;
   color: $primary-color;
 
   &--name {
@@ -61,5 +62,4 @@
 
 .card-icon {
   max-width: 6rem;
-  margin: 0 auto;
 }
