--- a/src/Components/Orders/Orders.scss
+++ b/src/Components/Orders/Orders.scss
@@ -2,24 +2,25 @@
 
 .orders {
   display: flex;
-  max-height: 95vh;
+  // min-height: 85vh;
   justify-content: center;
   flex-flow: row wrap;
-  position:fixed;
-  width:100%;
-  height:100%;
+  padding:1.5rem 0;
+  // position:fixed;
+  // width:100%;
+  // height:100%;
 }
 
 .order-card-container {
   background-color: $primary-color;
-  min-width: 75%;
-  height: 85%;
+  min-width: 60%;
+  max-height: 85vh;
   border-radius: 10px;
   outline: 2px solid rgb(0, 0, 0);
   color: black;
   font-size: 1.25rem;
   padding: 1rem;
-  margin: 1rem 0;
+  // margin: 1rem 0;
   overflow-y: auto;
 
   &--header {
