--- a/src/Components/Orders/Orders.scss
+++ b/src/Components/Orders/Orders.scss
@@ -14,7 +14,8 @@
 .order-card-container {
   background-color: $primary-color;
   min-width: 60%;
-  max-height: 85vh;
+  height:70vh;
+  max-height: 80vh;
   border-radius: 10px;
   outline: 2px solid rgb(0, 0, 0);
   color: black;
