--- a/src/Components/Orders/Orders.scss
+++ b/src/Components/Orders/Orders.scss
@@ -13,9 +13,9 @@
 
 .order-card-container {
   background-color: $primary-color;
-  min-width: 60%;
-  height:70vh;
-  max-height: 80vh;
+  min-width: 80%;
+  height:80vh;
+  // max-height: 80vh;
   border-radius: 10px;
   outline: 2px solid rgb(0, 0, 0);
   color: black;
