--- a/src/Components/Orders/Orders.scss
+++ b/src/Components/Orders/Orders.scss
@@ -1,46 +1,40 @@
 @use '../../sass/variables'as *;
+@use '../../sass/mixins'as *;
 
 .orders {
   display: flex;
-  // min-height: 85vh;
   justify-content: center;
   flex-flow: row wrap;
-  padding:1.5rem 0;
-  // position:fixed;
-  // width:100%;
-  // height:100%;
+  padding: 1.5rem 0;
 }
 
 .order-card-container {
   background-color: $primary-color;
   min-width: 60%;
-  height:70vh;
-  // max-height: 80vh;
+  height: 70vh;
   border-radius: 10px;
   outline: 2px solid rgb(0, 0, 0);
   color: black;
   font-size: 1.25rem;
   padding: 1rem;
-  // margin: 1rem 0;
   overflow-y: auto;
 
   &--header {
     font-size: 2rem;
-    text-align:center;
-    text-decoration:underline;
+    text-align: center;
+    text-decoration: underline;
   }
 }
-.empty-orders-txt{
+
+.empty-orders-txt {
   font-size: 2vw;
-  margin-top:15%;
-  text-align:center;
+  margin-top: 15%;
+  text-align: center;
 }
 
 .order-card {
-  display: flex;
-  flex-flow: column nowrap;
+  @include flex-container(flex, column nowrap, unset, space-around);
   background-color: $primary-color;
-  justify-content: space-around;
   margin: .5rem 0;
   min-width: 65%;
   border-radius: 10px;
@@ -54,7 +48,7 @@
   }
 
   &--order-num {
-    font-size:1.25rem;
+    font-size: 1.25rem;
     text-decoration: underline;
     text-align: left;
   }
@@ -79,10 +73,7 @@
 
 
 .ordered-item {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: space-between;
+  @include flex-container(flex, row nowrap, center, space-between);
   margin: .5% 0;
   border-radius: 5px;
 
