--- a/src/sass/mixins.scss
+++ b/src/sass/mixins.scss
@@ -1,9 +1,6 @@
-@mixin text-shadow($text-shadow) {
-  text-shadow: 1px 0px 0px black,
-    -1px 0px 0px black,
-    0px 1px 0px black,
-    0px -2px 0px black,
-    0px 2px 0px black,
-    2px 0px 0px black,
-    -2px 0px 0px black,
+@mixin flex-container($display, $flow, $align, $justify) {
+  display: $display;
+  flex-flow: $flow;
+  align-items: $align;
+  justify-content: $justify;
 }
