--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -15,7 +15,7 @@
   height: 70vh;
   max-height: 80vh;
   border-radius: 10px;
-  outline: 2px solid black;
+  border: 2px solid black;
   background-color: $primary-color;
   font-size: 1.25rem;
   padding: 1rem;
