--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -34,7 +34,7 @@
 .nav-link-a {
   background-color: $primary-color;
   background-color: none;
-  outline: 1px solid black;
+  border: 1px solid black;
   border-radius: 10px;
   padding: .25rem 1rem;
   font-size: 1.25rem;
@@ -42,13 +42,13 @@
   margin: .25rem;
 
   &:hover {
-    outline: 1px solid black;
+    border: 1px solid black;
   }
 }
 
 .nav-link-a {
   color: $primary-color;
-  outline: 1px solid black;
+  border: 1px solid black;
 
   &--coffee {
     background-color: #a47c6c;
