--- a/src/Components/Orders/Orders.scss
+++ b/src/Components/Orders/Orders.scss
@@ -13,7 +13,7 @@
   min-width: 60%;
   height: 70vh;
   border-radius: 10px;
-  outline: 2px solid rgb(0, 0, 0);
+  border: 2px solid rgb(0, 0, 0);
   color: black;
   font-size: 1.25rem;
   padding: 1rem;
@@ -39,7 +39,7 @@
   min-width: 65%;
   border-radius: 10px;
   padding: 2.5rem 1rem;
-  outline: 2px solid black;
+  border: 2px solid black;
 
   &--date-and-total {
     color: #5b5b5b;
