--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -50,10 +50,9 @@
   @include flex-container(flex, row nowrap, center, space-between);
   padding: .5rem 1rem;
   border-bottom: 1px solid black;
-  margin: .25rem;
 
   &--item-icon {
-    max-width: 3.5rem;
+    max-width: 3.25rem;
   }
 }
 
@@ -71,10 +70,10 @@
 
 .cart-counter {
   @include flex-container(flex, row wrap, center, space-around);
-  min-width: 15%;
+  min-width: 25%;
 
   &--increase-btn {
-    width: 2rem;
+    padding: .1rem .75rem;
     border-radius: 30px;
     border: none;
     cursor: pointer;
@@ -82,7 +81,7 @@
   }
 
   &--decrease-btn {
-    width: 2rem;
+    padding: .1rem .75rem;
     border-radius: 30px;
     border: none;
     cursor: pointer;
@@ -122,7 +121,7 @@
 
 .cart-totals {
   &--final-total {
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     font-weight: 400;
     text-decoration: underline;
   }
