--- a/src/Components/Brew/Brew.scss
+++ b/src/Components/Brew/Brew.scss
@@ -18,6 +18,7 @@
 
   &--cart-btn {
     align-self: center;
+    color: black;
     padding: .5rem 1rem;
     background-color: $primary-color;
     border: 2px solid black;
