--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -1,6 +1,7 @@
 @use '../../sass/variables'as *;
 @use '../../sass/mixins'as *;
 
+
 .cart {
   display: flex;
   max-height: 95vh;
@@ -38,6 +39,7 @@
   overflow-y: scroll;
   overflow-x: auto;
   float: left;
+
 }
 
 .empty-txt {
@@ -71,6 +73,7 @@
 .cart-counter {
   @include flex-container(flex, row wrap, center, space-around);
   min-width: 25%;
+  color: black;
 
   &--increase-btn {
     padding: .1rem .75rem;
@@ -137,6 +140,7 @@
     border: 2px solid black;
     border-radius: 5px;
     cursor: pointer;
+    color: black;
     padding: .25rem 1.5rem;
 
     &:disabled {
